# django-q-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  run.py
backend/: settings.py  urls.py
tasks/: apps.py  decorators.py  serializers.py  tasks.py  urls.py  views.py
tasks/services/: email_service.py
tasks/templatetags/: mjml.py
templates/emails/: welcome.html
